correct page horizontal overflow
wrapped all divs with the row class with a corresponding .container div to follow bootstrap specification and prevent .row element negative margin causing overflow

--- a/src/scss/sections/_index.scss
+++ b/src/scss/sections/_index.scss
@@ -49,3 +49,11 @@
     color: vars.$black-text;
   }
 }
+.remove-x-pad {
+  padding-left: 0;
+  padding-right: 0;
+}
+.remove-x-margin {
+  margin-left: 0;
+  margin-right: 0;
+}
