--- a/src/scss/sections/_technologies.scss
+++ b/src/scss/sections/_technologies.scss
@@ -29,7 +29,6 @@
     border: 2px solid vars.$red;
     border-radius: 8px;
     background-color: rgba(vars.$red, 0.03);
-    width: 100%;
     padding: 1rem 0;
   }
   &-heading {
